# remote-terminal

./: Cargo.toml  README.md  readme.md
.github/workflows/: static.yml
frontend/: index.html
src/: lib.rs  main.rs
