[package]
name = "remote-exec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.5.1", features = ["derive"] }
http-types = "2.12.0"
owo-colors = "4.0.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tide = "0.16.0"
